# frostdao

./: .gitignore  Cargo.toml  README.md  bulletin-board.html  cli.html  demo-dkg.sh  demo-inspect.sh  demo-interactive.html  demo-server.py  demo-sign.sh  demo-simple.sh  demo.sh  index.html  plan.md  style.css  test-wasm.html
docs/: BITCOIN_GUIDE.md  CLI.md  CRYPTOGRAPHIC_ANALYSIS.md  DKG.md  HD_DERIVATION.md  HTSS.md  RECOVERY.md  RESHARE.md  TUI.md  demo-reshare.sh
frontend/: btc-send.html  index.html
frontend/css/: styles.css
frontend/js/: encryption.js  main.js  nostr.js  rooms.js  ui.js  verify.js
pkg/: frosty_taipei.js  frosty_taipei_bg.wasm  package.json  yushan.d.ts  yushan.js  yushan_bg.wasm  yushan_bg.wasm.d.ts
scripts/: build.sh  clean.sh  demo.sh  serve-frontend.sh  test.sh  wasm-build.sh
src/: birkhoff.rs  bitcoin_schnorr.rs  bitcoin_tx.rs  crypto_helpers.rs  dkg_tx.rs  keygen.rs  lib.rs  main.rs  recovery.rs  reshare.rs  signing.rs  storage.rs  wasm.rs
src/btc/: hd_address.rs  mod.rs  schnorr.rs  taproot_scripts.rs  transaction.rs
src/crypto/: birkhoff.rs  hd.rs  helpers.rs  mnemonic.rs  mod.rs  nip44.rs
src/nostr/: client.rs  events.rs  mod.rs
src/protocol/: dkg_tx.rs  keygen.rs  mod.rs  recovery.rs  reshare.rs  signing.rs
src/tui/: app.rs  mod.rs  state.rs
src/tui/components/: mod.rs  text_area.rs  text_input.rs
src/tui/screens/: address_list.rs  chain_select.rs  home.rs  keygen.rs  mnemonic.rs  mod.rs  nostr_keygen.rs  nostr_room.rs  send.rs  (+3 more)
tests/: dkg_flow_tests.rs  nip44_encryption_tests.rs  reshare_tests.rs  signing_tests.rs
