[package]
name = "frostdao"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frostdao"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
console_error_panic_hook = "0.1"
base64 = "0.22"
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# FROST cryptography
schnorr_fun = { version = "0.12.0", features = ["serde", "bincode"] }
secp256kfun = { version = "0.12.0", features = ["serde", "bincode"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Matrix operations for Birkhoff interpolation (HTSS)
nalgebra = "0.33"

# Random
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"

# NIP-44 encryption
chacha20poly1305 = "0.10"
hkdf = "0.12"

# BIP-32/39 HD Key Derivation
bip39 = "2.0"
hmac = "0.12"
zeroize = "1.7"
getrandom = { version = "0.2", features = ["js"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }
bech32 = "0.11"

# HTTP client for blockchain API
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
arboard = "3.6.1"
qrcode = "0.14.1"

# Nostr
nostr-sdk = { version = "0.37", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
serial_test = "3.1"
